--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Sisca Library</h1>
-    <h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2>
+    <h2>Saya adalah Mahasiswa Program Studi Perpustakaan dan Sains Informasi, Universitas Sumatera Utara</h2>
     <p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p>
 
 <h4>Menu</h4>
@@ -19,5 +19,6 @@
          <a href="contactus.html">Kritik dan Saran</a>
        </li>
      </ul>
+         <a href="address">https://library.usu.ac.id/</a>Perpustakaan Usu</a><br>
 </body>
 </html>
