--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
        </li>
      </ul>
          <a href="address">https://library.usu.ac.id/</a>Perpustakaan Usu</a><br>
+    </li>
+  </ul>
 </body>
-</html>
+</html> <i..akhir dokumen HTML..>
