--- a/index.html
+++ b/index.html
@@ -1,26 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Home Page</title>
+    <title>Sisca Librarytitle>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #6a11cb, #2575fc); /* Gradasi ungu dan biru */
+            color: white;
+        }
+        header, footer {
+            background-color: #3a3a3a; /* Warna abu-abu gelap untuk header */
+            color: white;
+            padding: 15px;
+            text-align: center;
+        }
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 50px;
+        }
+        nav {
+            display: flex;
+            gap: 20px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 15px;
+            display: inline-block;
+            background-color: rgba(255, 255, 255, 0.2);
+            border-radius: 5px;
+            transition: all 0.3s;
+        }
+        nav a:hover {
+            background-color: #facc15;
+            color: black;
+        }
+        .container {
+            width: 60%;
+            background-color: rgba(255, 255, 255, 0.2);
+            margin: 50px auto;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        }
+        h2 {
+            text-align: center;
+            color: #facc15; /* Warna kuning terang untuk heading */
+        }
+        p {
+            text-align: justify;
+            color: #333;
+            font-size: 16px;
+            line-height: 1.6;
+        }
+        .button-container {
+            text-align: center;
+            margin-top: 30px;
+        }
+        .button-container a {
+            background-color: #15803d;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+        .button-container a:hover {
+            background-color: #facc15;
+            color: black;
+        }
+        /* Dark Mode Styles */
+        .dark-mode {
+            background-color: #333;
+            color: white;
+        }
+        .dark-mode .container {
+            background-color: #444;
+        }
+        .dark-mode header, .dark-mode footer {
+            background-color: #0a5025;
+        }
+        /* Dark Mode Button */
+        #darkModeToggle {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #15803d;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        #darkModeToggle:hover {
+            background-color: #0a5025;
+        }
+    </style>
 </head>
 <body>
-    <h1>Sisca Library</h1>
-    <h2>Saya adalah Mahasiswa Program Studi Perpustakaan dan Sains Informasi, Universitas Sumatera Utara</h2>
-    <p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p>
 
-<h4>Menu</h4>
-<ul>
-    <li>
-        <a herf="aboutme.html">Tentang saya</a>
-      </li>
-      <li>
-         <a href="contactus.html">Kritik dan Saran</a>
-       </li>
-     <Ii>
-         <a href="address">https://library.usu.ac.id/</a>Perpustakaan Usu</a><br>
-    </li>
-  </ul>
+<header>
+    <h1>Sisca Library</h1>
+    <nav>
+        <a href="index.html">Beranda</a>
+        <a href="about.html">Seputar</a>
+        <a href="contact.html">Tanggapan</a>
+    </nav>
+</header>
+
+<div class="container">
+    <h2>Selamat Datang di Sisca Library!</h2>
+    <p>Halo! Saya <b>Sisca Amelia Putri</b>. Saya merupakan mahasiswa Program Studi Perpustakaan dan Sains Informasi di Universitas Sumatera Utara. Sebagai bagian dari perjalanan akademik saya, saya mengerjakan sebuah proyek website ini sebagai bagian dari pemenuhan tugas Mata Kuliah Pengembangan Web. Melalui proyek ini, saya berkesempatan untuk mempelajari dan mengaplikasikan berbagai keterampilan teknis, seperti HTML, CSS, serta teknologi web lainnya, yang mendukung pembelajaran saya dalam mengembangkan aplikasi berbasis web. Website ini juga menjadi sarana untuk mengasah kemampuan saya dalam mendesain dan menyusun platform digital yang bermanfaat.</p>
+    <div class="button-container">
+        <a href="https://library.usu.ac.id/" target="_blank">Kunjungi Perpustakaan USU</a>
+    </div>
+</div>
+
+<footer>
+    &copy; 2025 Perpustakaan Digital Fikri Syahputra
+</footer>
+
+
 </body>
-</html> <i..akhir dokumen HTML..>
+</html>
