--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <h1>Sisca Library</h1>
     <nav>
         <a href="index.html">Beranda</a>
-        <a href="about.html">Seputar</a>
-        <a href="contact.html">Tanggapan</a>
+        <a href="aboutme.html">Seputar Kami</a>
+        <a href="contactus.html">Tanggapan</a>
     </nav>
 </header>
 
