--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sisca Library<title>
-    <head>
-        <style>
+    <title>Sisca Library</title>
+    <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -13,22 +12,26 @@
             background: linear-gradient(135deg, #6a11cb, #2575fc); /* Gradasi ungu dan biru */
             color: white;
         }
+
         header, footer {
             background-color: #3a3a3a; /* Warna abu-abu gelap untuk header */
             color: white;
             padding: 15px;
             text-align: center;
         }
+
         header {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 15px 50px;
         }
+
         nav {
             display: flex;
             gap: 20px;
         }
+
         nav a {
             color: white;
             text-decoration: none;
@@ -38,10 +41,12 @@
             border-radius: 5px;
             transition: all 0.3s;
         }
+
         nav a:hover {
             background-color: #facc15;
             color: black;
         }
+
         .container {
             width: 60%;
             background-color: rgba(255, 255, 255, 0.2);
@@ -50,20 +55,24 @@
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         }
+
         h2 {
             text-align: center;
             color: #facc15; /* Warna kuning terang untuk heading */
         }
+
         p {
             text-align: justify;
             color: #333;
             font-size: 16px;
             line-height: 1.6;
         }
+
         .button-container {
             text-align: center;
             margin-top: 30px;
         }
+
         .button-container a {
             background-color: #15803d;
             color: white;
@@ -72,21 +81,26 @@
             border-radius: 5px;
             font-weight: bold;
         }
+
         .button-container a:hover {
             background-color: #facc15;
             color: black;
         }
+
         /* Dark Mode Styles */
         .dark-mode {
             background-color: #333;
             color: white;
         }
+
         .dark-mode .container {
             background-color: #444;
         }
+
         .dark-mode header, .dark-mode footer {
             background-color: #0a5025;
         }
+
         /* Dark Mode Button */
         #darkModeToggle {
             position: fixed;
@@ -100,6 +114,7 @@
             cursor: pointer;
             font-weight: bold;
         }
+
         #darkModeToggle:hover {
             background-color: #0a5025;
         }
@@ -119,6 +134,7 @@
 <div class="container">
     <h2>Selamat Datang di Sisca Library!</h2>
     <p>Halo! Saya <b>Sisca Amelia Putri</b>. Saya merupakan mahasiswa Program Studi Perpustakaan dan Sains Informasi di Universitas Sumatera Utara. Sebagai bagian dari perjalanan akademik saya, saya mengerjakan sebuah proyek website ini sebagai bagian dari pemenuhan tugas Mata Kuliah Pengembangan Web. Melalui proyek ini, saya berkesempatan untuk mempelajari dan mengaplikasikan berbagai keterampilan teknis, seperti HTML, CSS, serta teknologi web lainnya, yang mendukung pembelajaran saya dalam mengembangkan aplikasi berbasis web. Website ini juga menjadi sarana untuk mengasah kemampuan saya dalam mendesain dan menyusun platform digital yang bermanfaat.</p>
+    
     <div class="button-container">
         <a href="https://library.usu.ac.id/" target="_blank">Kunjungi Perpustakaan USU</a>
     </div>
@@ -128,6 +144,18 @@
     &copy; 2025 Perpustakaan Digital Fikri Syahputra
 </footer>
 
+<script>
+    function showTime() {
+        const timeElement = document.getElementById("currentTime");
+        const currentTime = new Date();
+        timeElement.innerHTML = currentTime.toLocaleTimeString();
+    }
+
+    setInterval(showTime, 1000); // Memperbarui setiap detik
+</script>
+
+<p>Waktu saat ini: <span id="currentTime"></span></p>
 
 </body>
 </html>
+
