--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
 </div>
 
 <footer>
-    &copy; 2025 Perpustakaan Digital Fikri Syahputra
+    &copy; 2025 Sisca Library
+    <p>Waktu saat ini: <span id="currentTime"></span></p>
 </footer>
 
 <script>
@@ -153,8 +154,6 @@
 
     setInterval(showTime, 1000); // Memperbarui setiap detik
 </script>
-
-<p>Waktu saat ini: <span id="currentTime"></span></p>
 
 </body>
 </html>
