--- a/index.html
+++ b/index.html
@@ -139,10 +139,13 @@
         <a href="https://library.usu.ac.id/" target="_blank">Kunjungi Perpustakaan USU</a>
     </div>
 </div>
+    <div>
+        <p>Waktu saat ini: <span id="currentTime"></span></p>
+    </div>
 
 <footer>
     &copy; 2025 Sisca Library
-    <p>Waktu saat ini: <span id="currentTime"></span></p>
+    
 </footer>
 
 <script>
