--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         <a href="index.html">Beranda</a>
         <a href="aboutme.html">Seputar Kami</a>
         <a href="contactus.html">Tanggapan</a>
+        <a href="index.html">Hello World</a>
     </nav>
 </header>
 
