--- a/contactus.html
+++ b/contactus.html
@@ -92,6 +92,7 @@
         <a href="index.html">Beranda</a>
         <a href="aboutme.html">Seputar Kami</a>
         <a href="contactus.html">Tanggapan</a>
+        <a href="index.html">Hello World</a>
     </nav>
 </header>
 
