--- a/index.html
+++ b/index.html
@@ -203,3 +203,40 @@ if ($conn) {
 
     setInterval(showTime, 1000); // Memperbarui setiap detik
 </script>
+    <a href="#">🌐 Hello World</a>
+    <a href="#">👨‍🏫 Data Dosen</a>
+  </nav>
+
+  <div class="container">
+    <h2>Hello World</h2>
+    <p>Ini adalah halaman Hello World pertama saya!</p>
+
+    <h3>Tabel</h3>
+    <table>
+      <tr>
+        <th>Nama</th>
+        <th>Usia</th>
+        <th>Kota</th>
+      </tr>
+      <tr>
+        <td>Andi</td>
+        <td>25</td>
+        <td>Medan</td>
+      </tr>
+      <tr>
+        <td>Budi</td>
+        <td>30</td>
+        <td>Jakarta</td>
+      </tr>
+    </table>
+
+    <h3>Link</h3>
+    <p>Klik <a href="https://www.usu.ac.id" target="_blank">di sini</a> untuk ke situs Universitas Sumatera Utara.</p>
+  </div>
+
+  <footer>
+    ©️ 2025 Perpustakaan Husnul
+  </footer>
+
+</body>
+</html>
